--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,6 @@
 
 body {
     font-family: 'Oswald', sans-serif;
-    font-size: 17px;
 }
 
 .sans {
@@ -11,6 +10,7 @@ body {
     color: #4f3c2f;
 
 }
+
 .navbar {
     min-height: 118px;
 }
@@ -45,15 +45,29 @@ body {
     color: #4f3c2fff;
 }
 @media (max-width: 767px) {
-
+    h4 {
+        font-size: large;
+    }
+    p {
+        font-size: 3.5vw;
+    }
+    b {
+        font-size: small;
+    }
     .crafting-line {
-        font-family: 'Open Sans', sans-serif;
-        font-size: 12px;
-        color: #4f3c2f;
+        font-size: 3.5vw;
+    }
+    .img-ico {
+        width: 15px;
+    }
+    .sans {
+        font-size: medium;
+    }
+    .cover-heading {
+        font-size: medium;
     }
     .crafting-number {
-        font-size: 11px;
-        color: #5cb544ff;
+        font-size: 3.5vw;
     }
     .img-adaptive {
         display: block;
@@ -79,6 +93,17 @@ body {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
         color: black;
     }
+    .form-control-lg {
+        height: 30px;
+        font-size: 15px;
+    }
+    .carousel-indicators {
+        display: none;
+    }
+    .carousel-item {
+        margin-bottom: 0px;
+    }
+
 }
 
 .nav-item-menu {
@@ -93,15 +118,12 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-
     max-width: 45em;
     margin: auto auto 1em;
     box-sizing: border-box;
-
     line-height: 1.5;
     text-align: center;
 }
-
 
 .padding {
     min-height: 100%;
@@ -154,12 +176,43 @@ i.fabmail {
 
 }
 
-#myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
+#myVideo{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    /* Make video to at least 100% wide and tall */
     min-width: 100%;
     min-height: 100%;
+
+    /* Setting width & height to auto prevents the browser from stretching or squishing the video */
+    width: auto;
+    height: auto;
+
+    /* Center the video */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.layer{
+    background: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    z-index: 4;
+    width: 100%;
+    height: 100%;
+    -webkit-transform: translate3d(0,0,0);
+    -ms-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
+}
+.layer-text {
+    font-size: 4.5vw;
+    color:white;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    position:absolute;
+    box-sizing:border-box;
 }
 
 /* Add some content at the bottom of the video/page */
@@ -180,7 +233,7 @@ i.fabmail {
 
 .crafting-line {
     font-family: 'Open Sans', sans-serif;
-    font-size: 20px;
+
     color: #4f3c2f;
 }
 
