--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,6 +42,14 @@ body {
     color: #4f3c2f;
 
 }
+.no-gutter > [class*='col-'] {
+    padding-right:0;
+    padding-left:0;
+}
+.crafting-mrg {
+    margin-left: 25px;
+}
+
 .number {
     color: #4f3c2f;
     font-size: 18px;
