--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,6 +27,7 @@ a:hover {
 .about-inst:hover {
     color: #5cb544;
 }
+
 .about-h1 {
     margin-bottom: 20px;
     color: #4f3c2f;
@@ -106,6 +107,10 @@ a:hover {
     margin-top: 55px;
     color: #4f3c2fff;
 }
+.nav-icons {
+    margin-top: 63px;
+}
+
 @media (max-width: 767px) {
     h4 {
         font-size: large;
