--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,6 +51,9 @@ a:hover {
     border: 2px solid #4f3c2f;
     background-color: #4f3c2f;
 }
+.uptext {
+    padding:0.5em
+}
 .btn-sm {
     /*margin-top: 2px;*/
     font-size: 17px;
@@ -275,15 +278,15 @@ i.fabmail {
 }
 
 /* Add some content at the bottom of the video/page */
-.content {
-    position: fixed;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    width: 100%;
-    height: 100%;
-    padding: 20px;
-}
+/*.content {*/
+    /*position: fixed;*/
+    /*bottom: 0;*/
+    /*background: rgba(0, 0, 0, 0.5);*/
+    /*color: #f1f1f1;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*padding: 20px;*/
+/*}*/
 
 .crafting-number {
     font-size: 38px;
@@ -338,5 +341,79 @@ i.fabmail {
 .topnav-right {
     float: right;
 }
+.icon-inst {
+
+}
+i.round {
+    border-radius: 50px;
+    border: 1.5px solid #4f3c2f;
+    padding: 5px 6px;
+}
+i.roundmail {
+    border-radius: 50px;
+    border: 1.5px solid #4f3c2f;
+    padding: 5px 4.5px;
+}
+i.roundmail:hover {
+    border-radius: 50px;
+    border: 1.5px solid #5cb544ff;
+    padding: 5px 4.5px;
+}
+i.round:hover {
+    border-radius: 50px;
+    border: 1.5px solid #5cb544ff;
+    padding: 5px 6px;
+}
+.slick-center .slide-h3{
+    color: #FFF;
+}
+.slider{
+    width: 100%;
+    height:7500px;
+    margin: 20px auto;
+    text-align: center;
+}
+.slide-h3{
+    margin: 10% 0 10% 0;
+    padding: 40% 20%;
+    background: #008ed6;
+}
+.slider div{
+    margin-right: 5px;
+}
+.slick-slide{
+    opacity: .6;
+}
+.slick-center{
+    display: block;
+    max-width: 10% !important;
+    max-height:20% !important;
+    opacity: 1;
 
 
+}
+
+.carousel{
+    width:90%;
+
+}
+.slick-slide{
+
+}
+.slick-slide img{
+    width:100%;
+
+}
+
+/* the slides */
+.slick-slide {
+    margin: 0 0px;
+}
+/* the parent */
+.slick-list {
+    margin: 0 0px;
+}
+
+.slick-center {
+    width: 1200px;
+}
