--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -354,6 +354,26 @@ i.roundmail {
     border: 1.5px solid #4f3c2f;
     padding: 5px 4.5px;
 }
+i.roundfooter {
+    border-radius: 50px;
+    border: 1.5px solid #fff;
+    padding: 5px 6px;
+}
+i.roundmailfooter {
+    border-radius: 50px;
+    border: 1.5px solid #fff;
+    padding: 5px 5px;
+}
+i.roundfooter:hover {
+    border-radius: 50px;
+    border: 1.5px solid #5cb544ff;
+    padding: 5px 6px;
+}
+i.roundmailfooter:hover {
+    border-radius: 50px;
+    border: 1.5px solid #5cb544ff;
+    padding: 5px 5px;
+}
 i.roundmail:hover {
     border-radius: 50px;
     border: 1.5px solid #5cb544ff;
@@ -363,6 +383,23 @@ i.round:hover {
     border-radius: 50px;
     border: 1.5px solid #5cb544ff;
     padding: 5px 6px;
+}
+a.footericons {
+    color: #fff;
+}
+a.footericons:hover {
+    color: #5cb544ff;
+}
+.btn-footer {
+    width: 172px;
+    border: 2px solid #fff;
+    margin-left: 15px;
+}
+.footer-margin {
+    margin-right: 15px;
+}
+.footer-mrico {
+    margin-right: 8px;
 }
 .slick-center .slide-h3{
     color: #FFF;
