--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -378,60 +378,17 @@ a.footericons:hover {
 .footer-mrico {
     margin-right: 8px;
 }
-.slick-center .slide-h3{
-    color: #FFF;
-}
-.slider{
-    width: 100%;
-    height:7500px;
-    margin: 20px auto;
-    text-align: center;
-}
-.slide-h3{
-    margin: 10% 0 10% 0;
-    padding: 40% 20%;
-    background: #008ed6;
-}
-.slider div{
-    margin-right: 5px;
-}
-.slick-slide{
-    opacity: .6;
-}
-.slick-center{
-    display: block;
-    max-width: 10% !important;
-    max-height:20% !important;
-    opacity: 1;
-}
-
-.carousel{
-    width:90%;
-
-}
-.slick-slide{
-
-}
-.slick-slide img{
-    width:100%;
-
-}
-
-.slick-slide {
-    margin: 0 0px;
-}
 .slick-list {
-    margin: 0 0px;
+    height: 100%;
 }
-
-.slick-center {
-    width: 1200px;
+.slick-track {
+    height: 100%;
 }
-
-.slick-prev, .slick-next {
-    width:60px;
-    height:34px
+.slick-prev {
+    left: 33%;
+    z-index: 1;
 }
-.slick-prev:before, .slick-next:before {
-    content:"";
+.slick-next {
+    right: 33%;
+    z-index: 1;
 }
